Sykdomsvurdering PPN: konstant periode og validering